Changelog api with jwt authentcation
