# api/models/environments-data.go
@@ -1,0 +1,7 @@
+package models
+
+// // Environment struct abstract of user table in database
+// type Environment struct {
+// 	EnvironmentID   uint32 `gorm:"primary_key;auto_increment" json:"id"`
+// 	EnvironmentName string `gorm:"size:20;not null;unique" json:"environment_name"`
+// }
