# api/router/routes/routes.go
@@ -15,10 +15,12 @@ func SetupRoutes(r *mux.Router) *mux.Router {
 
 	// handlers for API
 	getR := r.Methods(http.MethodGet).Subrouter()
-	getR.HandleFunc("/api/users", middlewares.SetMiddlewareLogger(middlewares.SetMiddlewareJSON(controllers.GetUsers)))
+	getR.HandleFunc("/api/config", middlewares.SetMiddlewareLogger(middlewares.SetMiddlewareJSON(middlewares.SetMiddlewareAuthentication(controllers.GetChangeLogs))))
 
-	// swagger:route GET /api/config changelog listChangeLog
-	// Return a list of config logs from the database
+	PostR := r.Methods(http.MethodPost).Subrouter()
+
+	// swagger:route POST /api/token changelog createSessionToken
+	// Create new session token entry
 	//     Consumes:
 	//     - application/json
 	//
@@ -28,17 +30,9 @@ func SetupRoutes(r *mux.Router) *mux.Router {
 	//     Schemes: http
 	//
 	//     Responses:
-	//       default: genericError
-	//       200: getConfiglogsResponse
-	getR.HandleFunc("/api/config", middlewares.SetMiddlewareLogger(middlewares.SetMiddlewareJSON(controllers.GetConfigLogs)))
-
-	getR.HandleFunc("/api/users/{id}", middlewares.SetMiddlewareLogger(middlewares.SetMiddlewareJSON(controllers.GetUser)))
-
-	PutR := r.Methods(http.MethodPut).Subrouter()
-	PutR.HandleFunc("/api/users/{id}", middlewares.SetMiddlewareLogger(middlewares.SetMiddlewareJSON(controllers.UpdateUser)))
-
-	PostR := r.Methods(http.MethodPost).Subrouter()
-	PostR.HandleFunc("/api/users", middlewares.SetMiddlewareLogger(middlewares.SetMiddlewareJSON(controllers.CreateUser)))
+	//       200: createSessionTokenResponse
+	//       403: createSessionTokenErrorResponse
+	PostR.HandleFunc("/api/token", middlewares.SetMiddlewareLogger(middlewares.SetMiddlewareJSON(controllers.GenerateSessionToken)))
 
 	// swagger:route POST /api/config changelog createChangeLog
 	// Create new config log entry
@@ -50,14 +44,18 @@ func SetupRoutes(r *mux.Router) *mux.Router {
 	//
 	//     Schemes: http
 	//
+	//     Security:
+	//     - bearer
+	//
+	//     SecurityDefinitions:
+	//     bearer:
+	//          name: Authorization
+	//          in: body
+	//
 	//     Responses:
-	//       200: configlogResponse
-	//       422: errorValidation
-	//       501: errorResponse
-	PostR.HandleFunc("/api/config", middlewares.SetMiddlewareLogger(middlewares.SetMiddlewareJSON(controllers.CreateConfigLog)))
-
-	DeleteR := r.Methods(http.MethodDelete).Subrouter()
-	DeleteR.HandleFunc("/api/users/{id}", middlewares.SetMiddlewareLogger(middlewares.SetMiddlewareJSON(controllers.DeleteUser)))
+	//       200: changelogResponse
+	//       401: changelogErrorResponse
+	PostR.HandleFunc("/api/config", middlewares.SetMiddlewareLogger(middlewares.SetMiddlewareJSON(middlewares.SetMiddlewareAuthentication(controllers.CreateChangeLog))))
 
 	// handler for documentation
 	opts := middleware.RedocOpts{
